# template-workflow

./: README.md  pyproject.toml
notebooks/: my_notebook.qmd
src/template_workflow/: helpers.py
