[project]
authors = [{name = "nathanhwangbo", email = "nathanhwangbo@gmail.com"}]
dependencies = []
name = "template-workflow"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
template_workflow = { path = ".", editable = true }

[tool.pixi.tasks]
scaffold = "mkdir -p data/raw data/processed analysis/archive"

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = ">=2.4.1,<3"
gdal = ">=3.12.1,<4"
libgdal-core = ">=3.12.1,<4"
rasterio = ">=1.5.0,<2"
dask = ">=2025.12.0,<2026"
netcdf4 = ">=1.7.3,<2"
h5netcdf = ">=1.7.3,<2"
pyogrio = ">=0.12.1,<0.13"
cartopy = ">=0.25.0,<0.26"
xarray = ">=2025.12.0,<2026"
regionmask = ">=0.13.0,<0.14"
